# spooling

./: .gitignore  LICENSE  README.md  SECURITY.md  docker-compose.yml  init.sql  pyproject.toml
.github/: EXTERNAL_ACTIONS.md
.github/workflows/: release.yml  test.yml
migrations/: 001_observability.sql
scripts/: scrub_secrets.py
spool/: cli.py  cloud.py  config.py  ingest.py  mcp_server.py  pricing.py  redact.py  server.py  subscription_pricing.py  tracing.py  watcher.py
spool/providers/: __init__.py  base.py  claude_code.py  codex.py  copilot.py  cortex_code.py  cursor.py  gemini.py  github.py  gitlab.py  kiro.py  opencode.py  windsurf.py
spooling/: __init__.py  agent.py  classifiers.py  cli.py  cloud.py  config.py  db.py  embeddings.py  evals.py  experiments.py  ingest.py  mcp_server.py  parser.py  pricing.py  redact.py  remote_otel.py  sdk.py  search.py  server.py  stats.py  subscription_pricing.py  tracing.py  watcher.py
spooling/connectors/: base.py  bigquery.py  clickhouse.py  factory.py  mongodb.py  mysql.py  postgresql.py  snowflake.py  types.py
spooling/connectors/rest/: base.py  shopify_connectors.py
spooling/providers/: __init__.py  antigravity.py  base.py  codex.py  copilot.py  cortex_code.py  cursor.py  gemini.py  github.py  gitlab.py  hermes.py  kiro.py  opencode.py  session_file.py  windsurf.py
tests/: test_parser.py  test_pricing.py  test_redact.py
ui/: next.config.js  package-lock.json  package.json  tailwind.config.js
ui/src/app/: globals.css  layout.tsx
ui/src/app/(app)/: layout.tsx
ui/src/app/(app)/analytics/: page.tsx
ui/src/app/(app)/chat/: page.tsx
ui/src/app/(app)/connections/: page.tsx
ui/src/app/(app)/dashboard/: page.tsx
ui/src/app/(app)/evals/: page.tsx
ui/src/app/(app)/sessions/: page.tsx
ui/src/app/(app)/settings/: page.tsx
ui/src/app/(app)/tools/: page.tsx
ui/src/app/(app)/traces/: page.tsx
ui/src/components/: AppNavigation.tsx  ModelHealthBanner.tsx  ThemeProvider.tsx  TraceConversation.tsx
ui/src/lib/: agChartTheme.ts  messageParser.tsx
