[project]
name = "spool"
version = "0.1.0"
description = "Local session tracker and semantic search for AI coding assistants"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Anthony Loya" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "psycopg[binary]>=3.1",
    "sentence-transformers>=3.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "watchdog>=4.0",
    "rich>=13.0",
    "httpx>=0.27",
    "anthropic>=0.40",
    "strands-agents[ollama]>=1.35",
    "strands-agents-evals>=0.1",
    "mcp>=1.27",
]

[project.scripts]
spool = "spool.cli:cli"

[tool.setuptools.packages.find]
include = ["spool*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
